0027208: Show method in Message_ProgressIndicator::NewScope should not be commented out

Undone commenting out of Show method