src/Message/Message_ProgressIndicator.cxx
@@ -115,7 +115,7 @@ Standard_Boolean Message_ProgressIndicator::NewScope (const Standard_Real span,
   scale.SetName ( name );
   scale.SetSpan ( myPosition, myScopes(1).LocalToBase ( GetValue() + span ) );
   myScopes.Prepend ( scale );
-//  Show(Standard_False); // to update textual representation, if any
+  Show(Standard_False); // to update textual representation, if any
   return myPosition < 1.;
 }
 
